@@ -3,6 +3,8 @@ Changes between 1.4.5 and 1.4.x
 
 - fix issue7: source.getstatementrange() now raises proper error
   if no valid statement can be found
+- make trackeback recursion detection more resilent
+  about the eval magic of a decorator library
 
 Changes between 1.4.4 and 1.4.5
 ==================================================
